--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@
   --gray-color: #6A6A6A; 
   --gray-light-color: #8E8E8E;
   --gray-medium-color: #D9D9D9;
+  --gray-extra-light-color: #E3E3E3;
   --red-color: #C13515;
   --red-light-color: #EE968A;
   --text-color: #000000; 
